Разделение AggregatorService.java